# fincore

./: .coverage  .gitattributes  .gitignore  README.md  __main__.py  data.json  fincore.py  finmore_holidays.json.xz  pyproject.toml  setup.py
.github/workflows/: ci.yaml  ci_coverage.yaml
htmlcov/: class_index.html  fincore_py.html  function_index.html  index.html  status.json  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_fincore_py.html
labs/: fincore-01.ipynb
rust/: Cargo.toml  README.md  fincore.rs  python_to_rust_conversion_log1.txt.xz  python_to_rust_conversion_log2.txt.xz  python_to_rust_conversion_log3.txt.xz  translation_prompt.md
tests/: conftest.py  requirements.txt  test_fincore.py
