[package]
name = "fincore"
version = "0.1.0"
edition = "2021"

[lib]
path = "fincore.rs"

[dependencies]
rust_decimal = { version = "1.30", features = ["maths"] }
rust_decimal_macros = "1.30"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
erased-serde = "0.4"
